--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ email: hangxigood@gmail.com
 description: > # this means to ignore newlines until "show_exerpts:"
   Some study notes
 show_excerpts: true # set to true to show excerpts on the homepage
-baseurl: /texture
+baseurl: /
 
 # Minima date format
 # refer to http://shopify.github.io/liquid/filters/date/ if you want to customize this
