--- a/_config.yml
+++ b/_config.yml
@@ -13,17 +13,17 @@ sass:
 
 permalink: /posts/:title/
 texture:
-  title: Adam Denisov
-  tagline: Developer. Designer
+  title: Frank.Xiang
+  tagline: Seeker
   date_format: "%b %-d, %Y"
   style: black
   showNav: false
-  showPicker: true
+  showPicker: false
 
   # generate social links in footer
   social_links:
     twitter: thelehhman
-    github:  thelehhman
+    github:  hangxigood
     linkedIn: in/thelehhman
     rss: rss
  
